# cpp_socket_client

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: SocketClient.h.in  config.h.in
include/: Error.hpp  FileInfo.h  FileSender.h  Launcher.h  LocalTranslator.h  NetPack.h  NetPack.hpp  Pointerable.h  Pointerable.hpp  SocketClient.h  TranslateRecorder.h  cJSON.h  config.h  progress.h
include/Application/: App.h  Component.h  LocalTranslator.h  config.h
include/Application/Components/: LocalTranslator.h  PackQueue_Limited_Len.hpp  TranslateLauncher.h  UserInterface.h
include/Backend/: imp_FileInfo.h  imp_FileInfo.hpp  imp_Launcher.h  imp_Launcher.hpp  imp_LocalTranslator.hpp  imp_SocketClient.h  imp_SocketClient.hpp  imp_TranslateRecorder.hpp
include/Handler/: Handler.h  Handler_Config.h  Loop.h  Message.h  MessageQueue.h  Watcher.hpp  WriteReadLock.h
lib/: cpp_Handler.lib  libcpp_Handler.dylib  libprogress.dylib  progress.lib
progress/: CMakeLists.txt  main.cpp  progress.cpp
runtime/: socket_client
source/: App.cpp  Component.cpp  FileInfo.cpp  FileSender.cpp  Launcher.cpp  LocalTranslator.cpp  SocketClient.cpp  TranslateLauncher.cpp  TranslateRecorder.cpp  UserInterface.cpp  cJSON.c
