cmake_minimum_required(VERSION 3.0.0)
project(socket_client VERSION 0.1.0)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)
set(VERSION 1.02)
set(MODE_DEBUG -1)
set(MODE_RELEASE 1)
if (WIN32)
    set(boost "C:\\Users\\Abstergo\\Downloads\\boost_1_79_0")
    add_definitions(-D _WIN32_WINNT=0x0501)
else ()
    set(boost "/usr/local/include")
endif ()

if (${CMAKE_BUILD_TYPE}==Debug)
    set(DEBUG_MODE -1)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/runtime)
    link_directories("/usr/local/lib" ${PROJECT_SOURCE_DIR}/lib)
else ()
    set(DEBUG_MODE 1)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/relruntime)
    link_directories("/usr/local/lib" ${PROJECT_SOURCE_DIR}/rellib)
endif ()

include_directories(BEFORE ${boost} ${PROJECT_SOURCE_DIR}/include)

file(GLOB_RECURSE SOURCE "source/*.cpp" "source/*.c" "include/*.h")
add_subdirectory(progress)
#add_subdirectory(${PROJECT_SOURCE_DIR}/clientLib)
add_executable(socket_client  ${SOURCE} main.cpp)
target_link_libraries(socket_client PUBLIC progress)