cmake_minimum_required(VERSION 3.0.0)
project(progress VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if (${CMAKE_BUILD_TYPE} STREQUAL Debug)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
else ()
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/rellib)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/rellib)
endif ()

include_directories("/usr/local/include" ${CMAKE_SOURCE_DIR}/include)
link_directories("/usr/local/lib" ${CMAKE_SOURCE_DIR}/lib)


if (WIN32)
add_library(progress STATIC progress.cpp)
else ()
add_library(progress SHARED progress.cpp)
endif ()